Fix extra horizontal scrolling on mobile in Hero and global styles

--- a/src/styles/base/global.scss
+++ b/src/styles/base/global.scss
@@ -27,7 +27,7 @@ a:active {
 
 .container {
   display: flex;
-  width: 100vw;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   flex-shrink: 0;
